Fixed Overflow Problems with Body

--- a/main.css
+++ b/main.css
@@ -9,6 +9,8 @@
 }
 
 body {
+  max-height: 100vh;
+  overflow: hidden;
   display: flex;
   justify-content: center;
   align-items: center;
